recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:2: error: not found: value spirale
  spirale(4,90,3,3)}
  ^